# stellar-poker-cosnarks

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DIFFICULTIES.md  README.md  TODO.md  docker-compose.yml
.tmp_conoir_diag/: Nargo.toml
.tmp_conoir_diag/src/: main.nr
app/: package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/src/components/: ActionPanel.tsx  Board.tsx  Card.tsx  PixelCat.tsx  PixelChip.tsx  PixelWorld.tsx  PlayerSeat.tsx  Table.tsx
app/src/lib/: api.ts  cards.ts  dealer-lines.ts  freighter.ts  game-state.ts  onchain.ts  use-poker-actions.ts  use-solo-betting.ts
circuits/deal_valid/: Prover.toml
circuits/deal_valid/src/: main.nr
circuits/lib/: Nargo.toml
circuits/lib/src/: commitments.nr  lib.nr  shuffle.nr
circuits/reveal_board_valid/: Prover.toml
circuits/reveal_board_valid/src/: main.nr
circuits/showdown_valid/: Nargo.toml  Prover.toml
circuits/showdown_valid/src/: main.nr
contracts/committee-registry/src/: lib.rs
contracts/game-hub/: Cargo.toml
contracts/game-hub/src/: lib.rs
contracts/poker-table/: Cargo.toml
contracts/poker-table/src/: betting.rs  game.rs  game_hub.rs  lib.rs  pot.rs  (+4 more)
contracts/zk-verifier/: Cargo.toml
contracts/zk-verifier/src/: lib.rs
docs/: developer-guide.md  protocol-spec.md  threat-model.md
scripts/: compile-circuits.sh  convert-vk.py  deploy-local.sh  deploy.sh  download-crs.sh  setup.sh  start-local.sh  test-flow.py
services/coordinator/: Cargo.toml  Dockerfile
services/node/: Cargo.toml
stellar-zk-cards/src/: lib.rs
(+44 files in other folders)
